--- a/carpool-front/src/app/app.html
+++ b/carpool-front/src/app/app.html
@@ -6,6 +6,11 @@
     <div class="floating-element">🌿</div>
   </div>
 
+  <!-- Petit colibri volant -->
+  <div class="colibri-container">
+    <div class="colibri">🐦</div>
+  </div>
+
   <nav class="main-nav">
     <div class="nav-brand">
       <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="flutter-animation">
@@ -14,6 +19,8 @@
         <path d="M21 10H3V12H5V22H7V12H9V22H11V12H13V22H15V12H17V22H19V12H21V10Z"></path>
       </svg>
       <span>École des Colibris - Covoiturage</span>
+      <!-- Petit colibri dans le titre -->
+      <div class="title-colibri">🐦</div>
     </div>
 
     <div class="nav-links">
