--- a/carpool-front/src/app/features/schedules/pages/schedule-edit-v2/components/trip-modal/trip-modal.component.html
+++ b/carpool-front/src/app/features/schedules/pages/schedule-edit-v2/components/trip-modal/trip-modal.component.html
@@ -64,7 +64,7 @@
               [id]="'child-' + childState.child.id"
               [checked]="childState.isSelected"
               [disabled]="childState.isDisabled"
-              (change)="onChildSelectionChange(childState.child.id!, $event.target?.checked || false)">
+              (change)="onChildSelectionChange(childState.child.id!, $event)">
             <label [for]="'child-' + childState.child.id"
                    [class.disabled]="childState.isDisabled">
               {{ childState.child.name }}
